{
    "name": "ConsoleControls",
    "maps": [
        {
            "name": "Console",
            "id": "72ede0bc-81c6-4878-86ad-1703f3b4a467",
            "actions": [
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "430c917f-9307-4d57-ad21-5209c5a0d9a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "3be1c3f1-13f7-4f56-a537-73ad8caf3676",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "d3850ff8-3bd7-426d-8f4a-599b0b68e5c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NeverDie",
                    "type": "Button",
                    "id": "c70ddbb3-3271-47fb-bc47-a65c1d690460",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PassiveAI",
                    "type": "Button",
                    "id": "764a0d6d-2971-4ebd-a6b5-3b1f0b36d955",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AIDebugLevel",
                    "type": "Button",
                    "id": "466111ba-ec3e-4b9d-b1c2-2e93675dcc02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LayoutDebug",
                    "type": "Button",
                    "id": "378debb7-9103-451d-a1a6-b77a3cc32887",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RegenerateDisabled",
                    "type": "Button",
                    "id": "22fffc5b-2ccb-4c2a-b3f7-26196c2ffb47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnEnemyWave",
                    "type": "Button",
                    "id": "fda187c4-0dde-4077-bbd0-7d96f314b65c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillAllEnemies",
                    "type": "Button",
                    "id": "7b7e707e-5367-47dd-be01-5801a51f8f92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HarmHealAvatar",
                    "type": "Button",
                    "id": "ca69830e-716e-452b-ac54-f5b012d58769",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnEnemy",
                    "type": "Button",
                    "id": "6c776a62-737c-487a-8215-6e395f45891a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ControlsVisualization",
                    "type": "Button",
                    "id": "14a9a58d-719c-49db-941e-04f20190a7ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ced1bcfa-bef3-4a73-8564-db32d85f14b4",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac578a68-c351-4c99-8eac-587b5aa5aaf0",
                    "path": "<Keyboard>/pause",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49fda13b-75ba-4b99-be0e-c9188193a464",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NeverDie",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95e6556c-5b82-4575-a148-bf4d26d6b960",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PassiveAI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c151e34-11ff-4ac9-a864-8c47ba9b19cb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AIDebugLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "048cfc44-f843-47f5-97b3-1a7d169a6be2",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RegenerateDisabled",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3b003f4-72bd-490f-bbc6-c6edd9baa2d0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnEnemyWave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1649ce7-3ba6-4634-a0b4-e35e8b7712cf",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HarmHealAvatar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e685a01e-c81b-4ef1-9bc5-3ed5f4098f7d",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "Scale(factor=10)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "110db59d-45e1-48d5-80c3-01372243cd1f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f80d2ce-c0df-43d2-9235-d6cca973e674",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80f9f4e3-7684-407b-8be0-c7f618128800",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "945974d7-c71d-4131-90ce-fab863926d6a",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e6e889a-a86d-4a33-8f4c-0d349e2a5c03",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2bce110-cf74-475b-893f-b96e1c006c92",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "Scale(factor=6)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90c99b2d-493c-40dc-bdaa-3338cf8f190f",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "Scale(factor=7)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "494d7ec5-d5c8-4b9e-be92-b4522518d452",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "Scale(factor=8)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c33e1ae7-fa8a-486a-af2d-de8d616e2004",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "Scale(factor=9)",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42610a8d-afd2-444c-bd70-8de62e2ce5a8",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillAllEnemies",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "421b7f62-ff4b-4b33-bd4e-85f0d69e3924",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a41138a-bfcb-4e03-8591-3cddf9a11344",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlsVisualization",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba30afe3-6375-4df8-b3b7-0684db67a863",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LayoutDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}